force-app/main/default/objects/How_to_Enroll__c/How_to_Enroll__c.object-meta.xml
<CustomObject>
    <label>How to Enroll</label>
    <nameField>
        <label>How  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>How to Enroll</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>