force-app/main/default/objects/How_to_Enroll__c/fields/Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee__c</fullName>
    <label>Base Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>