force-app/main/default/objects/How_to_Enroll__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <label>Discount Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>