force-app/main/default/objects/How_to_Enroll__c/fields/Fee_Before_GST__c.field-meta.xml
<CustomField>
    <fullName>Fee_Before_GST__c</fullName>
    <formula>Base_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Before GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>