force-app/main/default/objects/How_to_Enroll__c/fields/OTP_Fees__c.field-meta.xml
<CustomField>
    <fullName>OTP_Fees__c</fullName>
    <formula>Base_Fee__c  +  OTP_Waiver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTP Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>