force-app/main/default/objects/How_to_Enroll__c/fields/OTP_Waiver__c.field-meta.xml
<CustomField>
    <fullName>OTP_Waiver__c</fullName>
    <label>OTP Waiver %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>