force-app/main/default/objects/How_to_Enroll__c/fields/Preferred_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Method__c</fullName>
    <label>Preferred Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>e-payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>