force-app/main/default/objects/How_to_Enroll__c/fields/Waiver__c.field-meta.xml
<CustomField>
    <fullName>Waiver__c</fullName>
    <label>Waiver %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>